Revision history for {{$dist->name}}

{{$NEXT}}
  - updated my dists to latest
  - rm Test::Vars

1.48      2015-02-19 07:59:25 -0500
  - updated my dists to latest
  - rm AnyEvent
  - rm Authen::Simple
  - rm Crypt::PasswdMD5
  - rm DBI
  - rm File::chdir
  - rm HTTP::Tiny
  - rm IPC::Run
  - rm Number::Bytes::Human
  - rm Perl::Critic

1.47      2015-02-18 20:04:36 -0500
  - updated my dists to latest
  - rm Mojo::JSON::Any

1.46      2015-02-12 13:37:07 -0500
  - updated my dists to latest

1.45      2015-02-10 19:09:00 -0500
  - added FFI::Platypus::Lang::Fortran

1.44      2015-02-09 08:20:53 -0500
  - updated my dists to latest

1.43      2015-02-05 14:24:56 -0500
  - updated my dists to latest

1.42      2015-02-03 16:15:13 -0500
  - fix logic from last revision
  - updated my dists to latest

1.41      2015-02-03 16:06:01 -0500
  - UUID::FFI on linux only
  - Alien::Editline and Term::EditLine2 are not installed on windows
  - FFI::TinyCC not installed on cygwin

1.40      2015-02-03 12:05:05 -0500
  - added FFI::Platypus::Lang::Pascal
  - updated my dists to latest
  
1.39      2015-02-02 05:08:44 -0500
  - fix version for FFI::ExtractSymbols

1.38      2015-02-02 05:05:16 -0500
  - added FFI::ExtractSymbols
  - added FFI::Platypus::Lang::CPP::Demangle::XS
  - updated my dists to latest

1.37      2015-01-30 15:47:23 -0500
  - added FFI::Platypus::Lang::Rust
  - added FFI::Platypus::Lang::CPP
  - updated my dists to latest

1.36      2015-01-28 17:15:35 -0500
  - updated my dists to latest

1.35      2015-01-23 19:00:25 -0500
  - added FFI::Platypus::Type::StringArray
  - updated my dists to latest

1.34      2015-01-22 10:52:37 -0500
  - added UUID::FFI
  - updated my dists to latest

1.33      2015-01-21 23:31:42 -0500
  - add Win32::Getppid  
  - updated my dists to latest

1.32      2015-01-09 16:53:40 -0500
  - updated my dists to latest
  - add FFI::Platypus
    not on CPAN yet, but I have a good feeling about it

1.31      2015-01-08 04:00:42 -0500