@@ -97,6 +97,7 @@ Test::Fixme                                    = 0.14
 URI::ws                                        = 0.03
 UUID::FFI                                      = 0.05
 WebService::LiveJournal                        = 0.07
+Win32::ErrorMode                               = 0.03
 Win32::Getppid                                 = 0.02
 Win32::Shortcut::Readlink                      = 0.02
 WWW::Bugzilla::BugTree                         = 0.03
