@@ -50,6 +50,7 @@ sub new
   {
     push @skip, qw(
       Alien::o2dll
+      Win32::ErrorMode
     );
   }
 
