@@ -1,8 +1,9 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
-  - updated my dists to latest
-  - rm Test::Vars
+  - Updated my dists to latest
+  - Added Win32::ErrorMode (MSWin32 / cygwin only)
+  - Removed Test::Vars
 
 1.48      2015-02-19 07:59:25 -0500
   - updated my dists to latest
